--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 02 14:50:50 EST 2021
-sdk.dir=C\:\\Users\\mohaw\\AppData\\Local\\Android\\Sdk
+#Thu Mar 04 11:44:07 EST 2021
+sdk.dir=C\:\\Users\\18047\\AppData\\Local\\Android\\Sdk
