Added player class

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 11 22:58:13 EST 2021
-sdk.dir=/Users/admin/Library/Android/sdk
+#Wed Mar 24 23:54:02 EDT 2021
+sdk.dir=C\:\\Users\\mohaw\\AppData\\Local\\Android\\Sdk
