--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 28 14:05:16 EDT 2021
-sdk.dir=/Users/admin/Library/Android/sdk
+#Mon Mar 29 00:37:09 EDT 2021
+sdk.dir=C\:\\Users\\18047\\AppData\\Local\\Android\\Sdk
