--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 16 18:11:42 EDT 2021
-sdk.dir=C\:\\Users\\mohaw\\AppData\\Local\\Android\\Sdk
+#Sat Apr 17 22:21:35 EDT 2021
+sdk.dir=/Users/admin/Library/Android/sdk
