--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 18 12:50:48 EDT 2021
-sdk.dir=C\:\\Users\\roychung\\AppData\\Local\\Android\\Sdk
+#Sun Apr 18 22:55:57 EDT 2021
+sdk.dir=/Users/admin/Library/Android/sdk
