--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 26 23:56:32 EDT 2021
-sdk.dir=C\:\\Users\\18047\\AppData\\Local\\Android\\Sdk
+#Tue Apr 27 23:07:10 EDT 2021
+sdk.dir=C\:\\Users\\roychung\\AppData\\Local\\Android\\Sdk
