--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 28 23:18:18 EDT 2021
-sdk.dir=C\:\\Users\\SANIDHYA\\AppData\\Local\\Android\\Sdk
+#Wed Apr 28 23:26:12 EDT 2021
+sdk.dir=C\:\\Users\\roychung\\AppData\\Local\\Android\\Sdk
